--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
        <nav>
            <ul class="menu">
-               <li> <a href="planning.html" Tema 5: CSS3></a> </li>
+               <li> <a href="planning.html"> Tema 5: CSS3</a> </li>
            </ul>
        </nav>
 </body>
