--- a/index.html
+++ b/index.html
@@ -13,10 +13,16 @@
     <h2>WhasthApp: 3165033618</h2>   
     <h2>Skype: patrixia44</h2>  
        <h2>Correo:jpbecerrag@unadvirtual.edu.co</h2> 
+</body>
+<head>
+    <title>Actividad 2</title>
+</head>
 
+<body>
        <nav>
            <ul class="menu">
-               <li> <a href="planning.html"> Tema 5: CSS3</a> </li>
+               <li> <a href="planning.html"> Tema 5: CSS3</li> </a>
+
            </ul>
        </nav>
 </body>
