--- a/autoevaluacion2.html
+++ b/autoevaluacion2.html
@@ -17,6 +17,6 @@
      
       <h2>Autoevaluación</h2>
 
-      <p class="parrafo">Esta página esta aun no esta diseñada, nos disculpamos por los inconvenientes</p>
+      <p class="parrafo">Esta página esta aun no esta diseñada, nos disculpamos por los inconvenientes.</p>
 </body>
 </html>
