--- a/conceptos01.html
+++ b/conceptos01.html
@@ -7,17 +7,19 @@
     <link rel="stylesheet" href="estiloweb.css">
 </head>
 <body>
+    <h2>Conceptos</h2>
     <h1 class="titulo">  
         CSS3: Estilos Interno y Externos <br>
         Selectores CSS
 
     </h1 >
     <table class="menu"> 
-      <td>  <a href="inicio.html">Inicio</a> </td>
-      <td><a href="conceptos01.html">Conceptos</a> </td>
-      <td> <a href="autoevaluacion1.html">Autoevaluación</a> </td>
-      <td> <a href="autor.html"> Autor</a></td>
-    </table>
+        <td>  <a href="inicio.html">Inicio</a> </td>
+        <td><a href="conceptos01.html">Conceptos</a> </td>
+        <td><a href="recursos1.html">Recursos</a> </td>
+        <td> <a href="autoevaluacion1.html">Autoevaluación</a> </td>
+        <td> <a href="autor.html"> Autor</a></td>
+      </table>
 
     <h2>Conceptos Parte 1:</h2>
     <h3>
