--- a/recursos1.html
+++ b/recursos1.html
@@ -21,7 +21,7 @@
       </table>
       <h2>Recursos</h2>
 
-      <p class="parrafo">Esta página esta aun no esta diseñada, nos disculpamos por los inconvenientes</p>
+      <aside> <iframe width="560" height="315" src="https://www.youtube.com/embed/7SKYMkOeMHs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </aside>
 
      <h2 class="menu">  <a href="recursos2.html">Recursos(Siguiente Página "Recursos 2") </a> </h2>
 </body>
