--- a/autoevaluacion2.html
+++ b/autoevaluacion2.html
@@ -17,6 +17,8 @@
      
       <h2>Autoevaluación</h2>
 
-      <p class="parrafo">Esta página esta aun no esta diseñada, nos disculpamos por los inconvenientes.</p>
+      <h2>Actividades Lúdicas.</h2> <br><br>
+      <p><iframe width="795" height="690" frameborder="0" src="https://es.educaplay.com/juego/7797878-tema_css3.html"></iframe></p>
+
 </body>
 </html>
