--- a/autoevaluacion1.html
+++ b/autoevaluacion1.html
@@ -16,7 +16,11 @@
       </table>
       <h2>Autoevaluación</h2>
 
-      <p class="parrafo">Esta página esta aun no esta diseñada, nos disculpamos por los inconvenientes.</p>
+      <h2>Actividades Lúdicas (Sopa de Letras)</h2>
+    <br><br>
+    <p><iframe width="795" height="690" frameborder="0" src="https://es.educaplay.com/juego/7798588-tema_css3.html"></iframe></p>
+
+    <inframe src="pdf/Matriz-EvalSite.pdf"></inframe>
 
      <h2 class="menu">  <a href="autoevaluacion2.html">Autoevaluación(Siguiente Página "Autoevaluacion 2") </a> </h2>
 
