--- a/autoevaluacion1.html
+++ b/autoevaluacion1.html
@@ -20,7 +20,9 @@
     <br><br>
     <p><iframe width="795" height="690" frameborder="0" src="https://es.educaplay.com/juego/7798588-tema_css3.html"></iframe></p>
 
-    <inframe src="pdf/Matriz-EvalSite.pdf"></inframe>
+    <br><br><br>
+    
+    <td><a href="Matriz-EvalSite.pdf">Matriz de Evaluación.</a> </td>
 
      <h2 class="menu">  <a href="autoevaluacion2.html">Autoevaluación(Siguiente Página "Autoevaluacion 2") </a> </h2>
 
