--- a/autor.html
+++ b/autor.html
@@ -40,6 +40,9 @@
          <h2> Fotografía reciente</h2> </td>
             <td>  <img src="joha.png" alt="Johana Patricia Becerra"> </td>
         </tr>
-    </table>
+            </table>
+            
+            <br><br>
+            <aside><iframe width="560" height="315" src="https://www.youtube.com/embed/zBxfpXjFqfw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></aside>
 </body>
 </html>
