--- a/autor.html
+++ b/autor.html
@@ -41,8 +41,13 @@
             <td>  <img src="joha.png" alt="Johana Patricia Becerra"> </td>
         </tr>
             </table>
+            <table>
+                <td>
+                 <h2> Sustentación.</h2> </td>
+                    <td><iframe width="560" height="315" src="https://www.youtube.com/embed/zBxfpXjFqfw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+                    </td>
+                </tr>
+                    </table>
             
-            <br><br>
-            <aside><iframe width="560" height="315" src="https://www.youtube.com/embed/zBxfpXjFqfw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></aside>
 </body>
 </html>
